<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.acme.a3csci3130.DetailViewActivity">

    <EditText
        android:id="@+id/name"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="Name*"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/businessNumber"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="Business Number*"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/address"
        android:layout_width="395dp"
        android:layout_height="100dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:hint="Address"
        android:inputType="textMultiLine"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/businessNumber" />

    <Spinner
        android:id="@+id/province"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:entries="@array/provinces"
        android:prompt="@string/province_prompt"
        android:spinnerMode="dialog"
        app:layout_constraintTop_toBottomOf="@+id/address"
        app:layout_constraintLeft_toRightOf="@+id/textProv"
        android:layout_marginLeft="8dp" />

    <Spinner
        android:id="@+id/business"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:entries="@array/businesses"
        android:prompt="@string/business_prompt"
        android:spinnerMode="dialog"
        app:layout_constraintTop_toBottomOf="@+id/province"
        app:layout_constraintLeft_toRightOf="@+id/textBus"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/textProv"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="Province/Territory:"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/province"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textBus"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="Primary Business*:"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/business"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Update Data"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:onClick="updateContact"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/textBus" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Erase Contact"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp"
        android:onClick="eraseContact"
        android:layout_marginTop="60dp"
        app:layout_constraintTop_toBottomOf="@+id/business" />

    <TextView
        android:id="@+id/userNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="* is Required"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/textBus" />

</android.support.constraint.ConstraintLayout>
