<resources>
    <string name="app_name">A3csci3130</string>
    <string name="title_activity_list">ListActivity</string>

    <string name="province_prompt">Province/Territory</string>
    <string name="business_prompt">Primary Business</string>

    <string-array name="provinces">
        <item>\u0020</item>
        <item>AB</item>
        <item>BC</item>
        <item>MB</item>
        <item>NB</item>
        <item>NL</item>
        <item>NS</item>
        <item>NT</item>
        <item>NU</item>
        <item>ON</item>
        <item>PE</item>
        <item>QC</item>
        <item>SK</item>
        <item>YT</item>
    </string-array>

    <string-array name="businesses">
        <item>Fisher</item>
        <item>Distributor</item>
        <item>Processor</item>
        <item>Fish Monger</item>
    </string-array>
</resources>
